--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-text-transition",
-  "version": "3.1.0",
+  "name": "@simomatte/react-text-transition",
+  "version": "3.1.1-beta",
   "description": "A React plugin that animates your text when it changes.",
   "typings": "lib/index.d.ts",
   "main": "lib/index.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/WinterCore/react-text-transition.git"
+    "url": "git+https://github.com/simomatte/react-text-transition.git"
   },
   "keywords": [
     "react",
@@ -22,12 +22,12 @@
     "motion",
     "plugin"
   ],
-  "author": "WinterCore <hogobbl@gmail.com> (https://www.wintercore.dev/)",
+  "author": "simomatte <simomatte@devel.matteucci.dev> (https://www.matteucci.dev/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/WinterCore/react-text-transition/issues"
+    "url": "https://github.com/simomatte/react-text-transition/issues"
   },
-  "homepage": "https://github.com/WinterCore/react-text-transition#readme",
+  "homepage": "https://github.com/simomatte/react-text-transition#readme",
   "devDependencies": {
     "@types/prop-types": "^15.7.5",
     "@types/react": "^19.1.6",
