ts: now using ES2015

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "strictPropertyInitialization": true,
         "module": "commonjs",
         "moduleResolution": "node",
-        "target": "es5",
+        "target": "ES2015",
         "jsx": "react"
     },
     "include": [
